Modify README, .gitignore, refine code

--- a/code/validation.ipynb
+++ b/code/validation.ipynb
@@ -24,10 +24,10 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import gseapy as gp\n",
+    "from scipy.stats import zscore\n",
     "from expressions_EDA import load_expressions_from_s3, renormalize_tpm\n",
     "from expressions_PCA import compute_pca_all, plot_pca\n",
-    "from graphics import plot_boxplot, plot_cibersort_stacked, plot_signature_dynamic\n",
-    "from scipy.stats import zscore"
+    "from graphics import plot_boxplot, plot_cibersort_stacked, plot_signature_dynamic"
    ]
   },
   {
@@ -1688,7 +1688,7 @@
     "    group_col=\"Group\",\n",
     "    group_order=time_order,\n",
     "    sort_by=\"Neutrophils\",\n",
-    "    title=\"CIBERSORT: Иммунный состав по фазам терапии\",\n",
+    "    title=\"CIBERSORT: Immune Cells counts\",\n",
     "    filename=\"cibersort_by_timepoint.png\",\n",
     ")"
    ]
